--- a/report.css
+++ b/report.css
@@ -1,4 +1,14 @@
+.numbers_Suggested{
+	text-align: center;
+	font-weight: bold; 
+}
+.Analysis_Cell {
+	vertical-align: top;
+}
 .barplot {
 	width:750px;
 	height:500px;
+}
+h1 {
+	text-align: center;
 }
